--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,15 @@
 
             <data
                 android:host="*"
-                android:scheme="*" />
+                android:scheme="http" />
+        </intent>
+
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+
+            <data
+                android:host="*"
+                android:scheme="https" />
         </intent>
     </queries>
 
